# Fortran-C-Cross-Language-Interface-Validator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  lapack_report.md  type_mapping_reference.md  user_guide.md
fcv/: cli.py
fcv/engine/: abi.py  comparator.py
fcv/ir/: type_map.py  types.py
fcv/parsers/: c_parser.py  flang_parser.py  fortran_parser.py
fcv/report/: formatter.py  severity.py
fcv/tests/: extract_hard_tests.py  generate_tests.py  test_comparator.py  test_hard_cases.py
fcv/tests/hard_pairs/TC-A-001_Single_character_flag_no_BIND_/: expected.json  header.h  interface.f90
fcv/tests/hard_pairs/TC-A-002_CHARACTER_function_return_valu/: expected.json  header.h  interface.f90
fcv/tests/hard_pairs/TC-A-003_Correct_BIND_C_version_of_TC_A/: expected.json  header.h  interface.f90
fcv/tests/hard_pairs/TC-A-004_Multiple_CHARACTER_args_with_m/: expected.json  header.h  interface.f90
fcv/tests/hard_pairs/TC-B-001_INTEGER_vs_long_on_LP64_Linux_/: expected.json  header.h  interface.f90
fcv/tests/hard_pairs/TC-B-002_REAL_default_kind_vs_double_SI/: expected.json  header.h  interface.f90
fcv/tests/hard_pairs/TC-B-003_INTEGER_c_int_vs_int32_t_vs_in/: expected.json  header.h  interface.f90
fcv/tests/hard_pairs/TC-B-004_c_long_width_is_platform_depen/: expected.json  header.h  interface.f90
fcv/tests/hard_pairs/TC-B-005_c_size_t_vs_c_int_for_array_di/: expected.json  header.h  interface.f90
fcv/tests/hard_pairs/TC-C-001_Missing_VALUE_on_scalar_C_pass/: expected.json  header.h  interface.f90
(+111 files in other folders)
