[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fcvalidator"
version = "0.1.0"
description = "Fortran-C Cross-Language Interface Validator"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "libclang>=16.0.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0"
]

[project.scripts]
fcv = "fcv.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["fcv*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["fcv/tests"]
python_files = ["test_*.py"]
